<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FavoriteTwitterSearches</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="queryPrompt">Enter Twitter search query here</string>
    <string name="tagPronpt">Tag your query</string>
    <string name="save">Save</string>
    <string name="taggedSearches">Tagged Searches</string>
    <string name="clearTags">Clear Tags</string>
    <string name="searchURL">http://search.google.com/search?q=</string>
	<string name="edit">Edit</string>
	<string name="erase">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="OK">OK</string>
	<string name="missingTitle">Print Some Text</string>
	<string name="missingMessage">Print text and give a tag for it</string>
	<string name="confirmTitle">Are you shure?</string>
	<string name="confirmMessage">There are all queries was deleted now!!!</string>

</resources>
